# dune-fem-tutorial

./: README.md  backuprestore_nb.html  boundary_nb.html  changelog.html  changelog290.html  chemical_nb.html  contributions.html  corepy.html  createversions.sh  crystal_nb.ipynb  cylinder_nb.html  ddfem_descr.html  developers.html  discontinuousgalerkin_nb.html  dune-fempy_nb.html  elasticity_nb.html  euler_nb.html  evalues_laplace_nb.html  furtherexamples.html  furthertopics.html  geoview_nb.html  gridviews_and_adaptivity.html  index.html  inforesources.html  landlab_descr.html  laplace-adaptive_nb.html  levelgridview_nb.html  lineplot_nb.html  mcf-algorithm_nb.html  mcf_nb.html  mmesh_nb.html  monolithicStokes_nb.html  nextsteps.html  ossetup  overview.html  solversInternal_nb.html  stokes.html  todo.html  uzawa-scipy_nb.html  versions.html
.doctrees/: .special.doctree  backuprestore_nb.doctree  biharmonic_IPC0_nb.doctree  boundary_nb.doctree  changelog.doctree  changelog210.doctree  chemical_nb.doctree  chimpl_nb.doctree  concepts_nb.doctree  contributions.doctree  cppfunctions_nb.doctree  crystal_nb.doctree  cylinder_nb.doctree  developers.doctree  discontinuousgalerkin_nb.doctree  dune-corepy_nb.doctree  dune-fempy_nb.doctree  elasticity_nb.doctree  environment.pickle  euler_nb.doctree  evalues_laplace_nb.doctree  fieldsplitStokes_nb.doctree  filteredgridview_nb.doctree  geoview_nb.doctree  gmsh2dgf_nb.doctree  inforesources.doctree  installation.doctree  landlab_descr.doctree  laplace-adaptive_nb.doctree  laplace-dwr-algorithm_nb.doctree  laplace-dwr_nb.doctree  linear_diffusion_overland_flow_dune_nb.doctree  lineplot_nb.doctree  mcf-algorithm_nb.doctree  mcf_nb.doctree  mixed_poisson_nb.doctree  mmesh_nb.doctree  monolithicStokes_nb.doctree  othergrids_nb.doctree  overview_of_advection_solver_nb.doctree  (+11 more)
2.11.0.4/: chimpl_nb.html  concepts_nb.html  crystal_nb.ipynb  discontinuousgalerkin_nb.html  dune-corepy_nb.html  dune-fempy_nb.html  index.html  installation.html  laplace-adaptive_nb.html  laplace-dwr_nb.html  levelgridview_nb.html  linear_diffusion_overland_flow_dune_nb.html  mcf_nb.html  overview.html  (+3 more)
doc/: .special.md  .special.rst  3dexample.py  3dexample.vtu  3dmesh.dgf  CMakeLists.txt  Makefile  README  backuprestore.py  backuprestore_nb.ipynb  biharmonic_IPC0.py  biharmonic_IPC0_nb.ipynb  boundary.py  boundary_nb.ipynb  changelog.rst  changelog210.rst  changelog290.default  changelog290.rst  changelog290.test  chemical.py  chemical_nb.ipynb  chimpl.py  chimpl_nb.ipynb  concepts.py  concepts_nb.ipynb  conf.py  conf.py.in  cpp.rst  cppfunctions.py  cppfunctions_nb.ipynb  crystal.py  crystal_nb.ipynb  cylinder.py  cylinder_nb.ipynb  data00000.vtu  discontinuousgalerkin.py  discontinuousgalerkin_nb.ipynb  dump.pickle  dune-corepy.py  dune-corepy_nb.ipynb  (+103 more)
doc/.ipynb_checkpoints/: boundary_nb-checkpoint.ipynb  concepts_nb-checkpoint.ipynb  cylinder_nb-checkpoint.ipynb  dune-corepy_nb-checkpoint.ipynb  dune-fempy-checkpoint.py  dune-fempy_nb-checkpoint.ipynb  laplace-dwr-algorithm_nb-checkpoint.ipynb  laplace-dwr_nb-checkpoint.ipynb  othergrids_nb-checkpoint.ipynb  solversExternal_nb-checkpoint.ipynb  solversInternal_nb-checkpoint.ipynb  spiral_nb-checkpoint.ipynb
doc/_static/: .swp
doc/_templates/: CMakeLists.txt  layout.html.old  searchbox.html
doc/additional/: laplace-dual.py
doc/master/html/: biharmonic_IPC0_nb.html  changelog.html  cppfunctions_nb.html  cylinder_nb.html  ddfem_descr.html  discontinuousgalerkin_nb.html  dune-corepy_nb.html  dune-fempy_nb.html  elasticity_nb.html  euler_nb.html  fieldsplitStokes_nb.html  furtherexamples.html  genindex.html  gridviews_and_adaptivity.html  installation.html  laplace-adaptive_nb.html  laplace-dwr-algorithm_nb.html  linear_diffusion_overland_flow_dune_nb.html  mcf-algorithm_nb.html  mcf_nb.html  mixed_poisson_nb.html  mmesh_descr.html  nextsteps.html  objects.inv  othergrids_nb.html  overview.html  scheme_api.html  slurmbatchscript.html  todo.html  twophaseflow_nb.html  userprojects.html  vemdemo_nb.html  wave_nb.html
doc/master/html/.doctrees/: .special.doctree  additional.doctree  boundary_nb.doctree  changelog.doctree  changelog210.doctree  chemical_nb.doctree  chimpl_nb.doctree  corepy.doctree  crystal_nb.doctree  ddfem_descr.doctree  elasticity_nb.doctree  fieldsplitStokes_nb.doctree  filteredgridview_nb.doctree  furthertopics.doctree  geoview_nb.doctree  gridviews_and_adaptivity.doctree  laplace-adaptive_nb.doctree  laplace-dwr-algorithm_nb.doctree  laplace-dwr_nb.doctree  levelgridview_nb.doctree  linear_diffusion_overland_flow_dune_nb.doctree  lineplot_nb.doctree  mcf-algorithm_nb.doctree  mixed_poisson_nb.doctree  mmesh_nb.doctree  othergrids_nb.doctree  parallelization_nb.doctree  slurmbatchscript.doctree  solversExternal_nb.doctree  spiral_nb.doctree  stokes.doctree  todo.doctree  uzawa-scipy_nb.doctree
doc/master/html/.doctrees/nbsphinx/: overview_of_advection_solver_nb.ipynb
doc/master/html/_downloads/704f00d031ea097320714f2380d48346/: parallelization_nb.ipynb
doc/master/html/_downloads/7ffb9d375c40e54b9fa0025b876a7bbb/: filteredgridview.py
doc/master/html/_sources/: biharmonic_IPC0_nb.ipynb.txt  monolithicStokes_nb.ipynb.txt  vemdemo_nb.ipynb.txt
doc/old/: chemical_nb.ipynb  evalues_laplace_nb.ipynb  fieldsplitStokes_nb.ipynb  levelgridview_nb.ipynb  mcf-algorithm_nb.ipynb  solversInternal_nb.ipynb  spiral_nb.ipynb  vemdemo_nb.ipynb
doc/profile_default/: ipython_config.py  ipython_kernel_config.py
doc/profile_default/startup/: 00.py
(+1189 files in other folders)
